examples/type_errors/mismatched_types.roto
filter foo {
	define {
		rx msg: BmpMessage;
		a = true;
		b = 4;
	}

	term foo {
		match {
			a == b;
		}
	}	
}
